--- a/css/main.css
+++ b/css/main.css
@@ -12,6 +12,15 @@ body{
     height: 20px;
 }
 
-.slider{
-     
+div.tooltip {   
+  position: absolute;           
+  text-align: left;           
+  width: auto;                  
+  height: auto;                 
+  padding: 2px;             
+  font: 12px sans-serif;        
+  background: lightsteelblue;   
+  border: 0px;      
+  border-radius: 8px;           
+  pointer-events: none;         
 }
